Adiciona suporte a websocket

--- a/src/main/resources/com/nevermind/client/view/chat.fxml
+++ b/src/main/resources/com/nevermind/client/view/chat.fxml
@@ -21,12 +21,9 @@
 
 <VBox prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.nevermind.client.controller.ChatController">
       <MenuBar>
-          <Menu mnemonicParsing="false" text="Chat">
-              <MenuItem mnemonicParsing="false" text="Close" />
-          </Menu>
-          <Menu mnemonicParsing="false" text="Settings">
-              <MenuItem mnemonicParsing="false" text="About" />
-              <MenuItem mnemonicParsing="false" text="Exit" />
+          <Menu mnemonicParsing="false" text="Options">
+              <MenuItem fx:id="aboutMenuItem" mnemonicParsing="false" text="About" />
+              <MenuItem fx:id="logoutMenuItem" mnemonicParsing="false" text="Logout" />
           </Menu>
       </MenuBar>
     <SplitPane dividerPositions="0.29797979797979796" prefHeight="160.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
