--- a/src/main/resources/com/nevermind/client/view/signup.fxml
+++ b/src/main/resources/com/nevermind/client/view/signup.fxml
@@ -22,7 +22,7 @@
       <VBox alignment="CENTER" spacing="15.0">
          <TextField fx:id="usernameInput" promptText="Username" />
          <PasswordField fx:id="passwordInput" promptText="Password" />
-         <TextField fx:id="emailInput" promptText="Email" />
+         <PasswordField fx:id="confirmPasswordInput" promptText="Confirm password" />
       </VBox>
       <VBox spacing="5.0">
          <Button fx:id="signupButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Signup" />
