--- a/src/main/resources/com/nevermind/client/view/signup.fxml
+++ b/src/main/resources/com/nevermind/client/view/signup.fxml
@@ -6,19 +6,16 @@
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
+<?import javafx.scene.image.ImageView?>
 <VBox alignment="CENTER" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.nevermind.client.controller.SignupController">
+
+   <ImageView fx:id="logo" fitHeight="200.0" fitWidth="200.0" preserveRatio="true"/>
+
    <VBox alignment="CENTER" maxWidth="-Infinity" prefWidth="300.0" spacing="40.0">
       <padding>
          <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
       </padding>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="NEVERMIND">
-         <font>
-            <Font size="36.0" />
-         </font>
-      </Text>
       <VBox alignment="CENTER" spacing="15.0">
          <TextField fx:id="usernameInput" promptText="Username" />
          <PasswordField fx:id="passwordInput" promptText="Password" />
