--- a/src/main/resources/com/nevermind/client/view/contact.fxml
+++ b/src/main/resources/com/nevermind/client/view/contact.fxml
@@ -10,41 +10,42 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<GridPane fx:id="root" fx:controller="com.nevermind.client.controller.ContactController" minWidth="180.0"
-          xmlns:fx="http://javafx.com/fxml/1">
+<GridPane fx:id="root" fx:controller="com.nevermind.client.controller.ContactController"
+          minWidth="180.0" xmlns:fx="http://javafx.com/fxml/1">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0"
-                           prefWidth="140.0"/>
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="140.0"/>
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="20.0"/>
     </columnConstraints>
     <rowConstraints>
         <RowConstraints minHeight="10.0" prefHeight="48.0" vgrow="SOMETIMES"/>
     </rowConstraints>
-    <Circle fill="LIME" radius="12.0" stroke="LIME" strokeType="INSIDE" GridPane.halignment="CENTER"
-            GridPane.valignment="CENTER">
+    <Circle fill="LIME" radius="12.0" stroke="LIME" strokeType="INSIDE"
+            GridPane.halignment="CENTER" GridPane.valignment="CENTER">
         <GridPane.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+            <Insets top="10.0" bottom="10.0" left="10.0" right="10.0"/>
         </GridPane.margin>
         <effect>
             <InnerShadow/>
         </effect>
     </Circle>
-    <VBox alignment="CENTER_LEFT" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1">
+    <VBox alignment="CENTER_LEFT" GridPane.columnIndex="1">
         <Label fx:id="nameLabel">
             <font>
                 <Font size="18.0"/>
             </font>
-            <VBox.margin>
-                <Insets/>
-            </VBox.margin>
         </Label>
         <Label text="Online">
             <font>
                 <Font size="10.0"/>
             </font>
         </Label>
-        <GridPane.margin>
-            <Insets/>
-        </GridPane.margin>
     </VBox>
+    <Label fx:id="notificationIcon" text="●" visible="false"
+           style="-fx-text-fill: red; -fx-font-size: 14px;"
+           GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.valignment="CENTER">
+        <GridPane.margin>
+            <Insets right="10.0"/>
+        </GridPane.margin>
+    </Label>
 </GridPane>
